argoCD/ingress-installation/ingress-setup-method2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.artmiss.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https   # the argocd-server Service's HTTPS port
  tls:
    - hosts: [argocd.artmiss.online]
      secretName: argocd-tls  # cert that matches the host
